--- a/olap/cubewidget.ui
+++ b/olap/cubewidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>700</height>
+    <width>854</width>
+    <height>698</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -58,8 +58,15 @@
            <height>50</height>
           </size>
          </property>
+         <property name="toolTip">
+          <string>Обновить данные</string>
+         </property>
          <property name="text">
           <string>Обновить</string>
+         </property>
+         <property name="icon">
+          <iconset theme="view-refresh">
+           <normaloff>.</normaloff>.</iconset>
          </property>
         </widget>
        </item>
@@ -69,13 +76,13 @@
       <widget class="QGroupBox" name="groupBoxY">
        <property name="minimumSize">
         <size>
-         <width>200</width>
+         <width>220</width>
          <height>0</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
-         <width>200</width>
+         <width>220</width>
          <height>16777215</height>
         </size>
        </property>
@@ -89,13 +96,13 @@
       <widget class="QGroupBox" name="groupBoxX">
        <property name="minimumSize">
         <size>
-         <width>200</width>
+         <width>220</width>
          <height>0</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
-         <width>200</width>
+         <width>220</width>
          <height>16777215</height>
         </size>
        </property>
@@ -140,28 +147,32 @@
       <widget class="QPushButton" name="cmdSave">
        <property name="maximumSize">
         <size>
-         <width>100</width>
+         <width>120</width>
          <height>16777215</height>
         </size>
        </property>
        <property name="text">
         <string>Сохранить</string>
        </property>
+       <property name="icon">
+        <iconset theme="document-save">
+         <normaloff>.</normaloff>.</iconset>
+       </property>
       </widget>
      </item>
     </layout>
    </item>
    <item>
-    <widget class="Viewer" name="tableView"/>
+    <widget class="TableView" name="tableView"/>
    </item>
   </layout>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
   <customwidget>
-   <class>Viewer</class>
+   <class>TableView</class>
    <extends>QTableView</extends>
-   <header>viewer.h</header>
+   <header>olap/tableview.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
