--- a/olap/cubewidget.ui
+++ b/olap/cubewidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>854</width>
-    <height>698</height>
+    <width>852</width>
+    <height>696</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -29,6 +29,9 @@
          </item>
          <item row="0" column="1">
           <widget class="QDateEdit" name="dateEditBeg">
+           <property name="displayFormat">
+            <string>dd.MM.yy</string>
+           </property>
            <property name="calendarPopup">
             <bool>true</bool>
            </property>
@@ -43,6 +46,9 @@
          </item>
          <item row="1" column="1">
           <widget class="QDateEdit" name="dateEditEnd">
+           <property name="displayFormat">
+            <string>dd.MM.yy</string>
+           </property>
            <property name="calendarPopup">
             <bool>true</bool>
            </property>
